# lambda-kochbuch

./: .ghci  README.md  lambda-kochbuch.cabal
lib/Lang/: Lambda.hs
lib/Lang/Lambda/: Parser.hs  Printer.hs  Simple.hs  Types.hs
lib/Lang/Lambda/Eval/: Simple.hs
tests/: doctests.hs  tests.hs
