name:                lambda-kochbuch
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Daniel Diaz
category:            Control
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

Extra-Source-Files:
    README.md

source-repository head
    type: git
    location: https://github.com/danidiaz/lambda-kochbuch.git

library
  exposed-modules:     Lang.Lambda.Simple
  build-depends:
                       base          >= 4.6   && < 5,
                       text          >= 1.2.2,
                       containers    >= 0.5,
                       megaparsec    >= 5.2.0,
                       transformers  >= 0.5
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite doctests
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -threaded
  hs-source-dirs:      tests,lib
  main-is:             doctests.hs
  other-modules:       Lang.Lambda.Simple
  build-depends:
                       base          >= 4.6    && < 5,
                       doctest       >= 0.11
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests, lib
  main-is:             tests.hs
  other-modules:       Lang.Lambda.Simple
  build-depends:
                       base          >= 4.6 && <5,
                       text          >= 1.2.2,
                       containers    >= 0.5,
                       megaparsec    >= 5.2.0,
                       transformers  >= 0.5,
                       tasty         >= 0.10.1.1,
                       tasty-hunit   >= 0.9.2
  default-language:    Haskell2010
